@@ -3,6 +3,15 @@
         Reviewed by Eric Seidel.
 
         https://bugs.webkit.org/show_bug.cgi?id=23506
+        Copy existing ImageDecoder.h in preparation for landing Skia changes on top.
+
+        * platform/image-decoders/skia/ImageDecoder.h: Copied from platform/image-decoders/ImageDecoder.h.
+
+2009-01-23  Darin Fisher  <darin@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        https://bugs.webkit.org/show_bug.cgi?id=23506
         Copy existing image-decoders in preparation for landing Skia changes on top.
 
         * platform/image-decoders/skia: Added.
